--- a/css/global.css
+++ b/css/global.css
@@ -10,7 +10,7 @@ html{
   scroll-behavior: smooth;
 }
 body {
-    background: url('/img/Frame_11.png') no-repeat;
+    background: url('/img/becgraund.png') no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
